--- a/src/main/resources/vue/layout.html
+++ b/src/main/resources/vue/layout.html
@@ -1,15 +1,25 @@
+<!DOCTYPE html>
 <html>
 <head>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
     <meta charset="utf8">
-    <script src="/webjars/vue/2.6.10/dist/vue.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     @componentRegistration
 </head>
-<body>
-<main id="main-vue" v-cloak>
-    @routeComponent
-</main>
-<script>
-    new Vue({el: "#main-vue"});
-</script>
-</body>
+    <body>
+        <main id="app" v-cloak>
+            @routeComponent
+        </main>
+
+        <script>
+            new Vue({
+                el: "#app",
+                vuetify: new Vuetify(),
+            });
+        </script>
+    </body>
 </html>
