--- a/src/main/resources/vue/layout.html
+++ b/src/main/resources/vue/layout.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+    <link href="vue.css" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     @componentRegistration
@@ -14,10 +15,12 @@
 <body>
 <div id="app" v-cloak>
     <v-app>
+        <div class="pre-formatted">
         <v-main>
             <toolbar></toolbar>
             @routeComponent
         </v-main>
+        </div>
     </v-app>
 </div>
 <script>
